--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .wrap {
-    padding-top: 280px;
+    padding-top: 150px;
 }
 
 .conteiner {
@@ -15,83 +15,117 @@ body {
 }
 
 .title {
+    text-align: center;
     font-size: 28px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #cf5f14;
     font-weight: 700;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+}
+
+.table {
+    text-align: center;
+    margin: 0 auto;
+
+    // .table__header .table__column
+    &__header &__column {
+        background-color: #bebebe;
+        box-shadow:
+            inset -1px -1px 5px 0 rgba(0, 0, 0, 0.2), 
+            inset 1px 1px 5px 0 rgba(221, 221, 221, 0.5);
+        padding: 5px 35px;
+
+        // .table__row:first-child .table__column:first-child
+        &:first-child {
+            border-top-left-radius: 10px;
+        }
+
+        // .table__row:first-child .table__column:last-child
+        &:last-child {
+            border-top-right-radius: 10px;
+        }
+    }
+
+    &__btn {
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        padding: 2px 5px;
+
+
+        &_edit {
+            background-color: #ffa704;
+            color: #353535;
+
+            &:hover {
+                background-color: #dd9002;
+            }
+        }
+
+        &_delete {
+            background-color: #ff2104;
+            color: #eeeeee;
+
+            &:hover {
+                background-color: #ce1902;
+            }
+        }
+        
+    }
+
+    // .table__row
+    &__row {
+        
+    }
+
+    // .table__column
+    &__column {
+        padding: 5px 10px;
+    }
+
+    // .table__row:nth-child(even)
+    &__row:nth-child(even) {
+        background-color: #dffadc;
+    }
+
+    // .table__row:nth-child(odd)
+    &__row:nth-child(odd) {
+        background-color: #fffddc;
+    }
 }
 
 .form {
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    grid-template-rows: 56px 56px 56px;
-    justify-content: center;
-    column-gap: 20px;
-    row-gap: 40px;
-    box-shadow: 1px 1px 5px rgb(0, 0, 0, 0.3);
-    padding: 40px 0;
+    text-align: center;
+    margin-bottom: 20px;
 
-		// .form__item
-		&__item {
-            position: relative;
-		}
+    &__content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 10px;
+    }
 
-		// .form__label
-		&__label {
-            position: absolute;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 18px;
-            color: #666666;
-            padding: 5px 0 0 10px;
-		}
+    // .form__item
+    &__item {
 
-		// .form__input
-		&__input {
-            border: none;
-            border-bottom: 2px solid rgba(0,0,0,.87);;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            background-color: #e2e2e2;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            height: 100%;
-            width: 100%;
-            font-size: 16px;
-            padding: 18px 0 0 10px;
-		}
+    }
 
-        // .form__submit
-        &__submit {
-            grid-column-start: 3;
-            text-align: center;
-            margin-left: auto;
-            width: 150px;
-            cursor: pointer;
-            transition: all .3s ease;
+    // .form__label
+    &__label {
+        display: block;
+        margin-bottom: 7px;
+    }
 
-            background-color: #fa7014;
-            border: 1px solid #fa7014;
-            text-transform: uppercase;
-            color: white;
-            font-size: 16px;
-            font-weight: 700;
-            border-radius: 5px;
+    // .form__input
+    &__input {
 
-            // .form__submit:hover
-            &:hover {
-                background-color: #cf5f14;
-            }
-        }
+    }
 
-        // .form__result
-        &__result {
-            font-size: 16px;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-            // .form__result--big
-            &--big {
-                font-size: 26px;
-                font-weight: 600;
-            }
-        }
+    // .form__btn
+    &__btn {
+        font-size: 16px;
+        max-height: 30px;
+        padding: 5px 10px;
+    }
 }
